--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
 
     <style>
-        /* --- STRATEGI FINAL UNTUK MENGUNCI BODY --- */
+        /* ====================================================== */
+        /* === KUNCI UTAMA: STRATEGI "TUTUP SEMUA CELAH" === */
+        /* ====================================================== */
         html, body {
+            /* 1. Mengisi seluruh layar */
             width: 100%;
             height: 100%;
-            overflow: hidden; /* Mencegah scrollbar */
 
-            /* KUNCI UTAMA: Mengunci posisi body ke viewport */
+            /* 2. Mengunci posisi body ke layar, ini akan mematikan "ayunan" */
             position: fixed; 
 
-            /* Mencegah efek 'pantulan' atau 'ayunan' di semua browser */
+            /* 3. Mencegah scrollbar dan efek "pantulan" secara eksplisit */
+            overflow: hidden; 
             overscroll-behavior: none; 
 
+            /* Styling dasar */
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-color: #f0f2f5;
         }
@@ -30,9 +34,8 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 100%; /* Mengisi penuh body yang sudah fixed */
+            height: 100%; /* Mengisi penuh body yang sudah dikunci */
             background-color: #fff;
-            /* Kita tidak perlu max-width di sini karena body sudah dikunci */
         }
 
         /* Header Aplikasi */
@@ -41,7 +44,7 @@
             background-color: #007bff;
             color: white;
             padding: 15px;
-            /* viewport-fit=cover di meta butuh ini untuk safe-area */
+            /* Memberi ruang untuk notch/Dynamic Island di iPhone */
             padding-top: calc(15px + env(safe-area-inset-top));
             text-align: center;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -64,6 +67,7 @@
             background-color: #ffffff;
             border-top: 1px solid #e0e0e0;
             padding: 10px 15px;
+            /* Memberi ruang untuk Home Indicator di iPhone */
             padding-bottom: calc(10px + env(safe-area-inset-bottom));
             z-index: 10;
             display: flex;
@@ -71,7 +75,7 @@
             gap: 10px;
         }
 
-        /* Styling lain tetap sama */
+        /* Styling lain tidak berubah */
         .app-content h2 { margin-bottom: 15px; color: #333; }
         .app-content p { line-height: 1.6; margin-bottom: 20px; color: #555; }
         #chat-form { display: contents; }
@@ -90,7 +94,7 @@
 
         <main class="app-content">
             <h2>Konten Bisa Digulir</h2>
-            <p>Dengan strategi `position: fixed` pada body, efek 'ayunan' atau 'pantulan' di Safari seharusnya sudah hilang sepenuhnya.</p>
+            <p>Dengan strategi `position: fixed`, "celah kosong" dan efek "ayunan" di Safari seharusnya sudah hilang sepenuhnya. Aplikasi kini terkunci di layar.</p>
             <p><strong>Paragraf 1:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
             <p><strong>Paragraf 2:</strong> Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor.</p>
             <p><strong>Paragraf 3:</strong> Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh.</p>
